objects/redwing__Training_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Is_Certification_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is it a certification plan or not?</description>
        <inlineHelpText>Is it a certification plan or not?</inlineHelpText>
        <label>Is Certification Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Maintenance_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to decide if this learning plan is part of an certification maintenance</description>
        <label>Is Maintenance Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maintenance_Expiration_Date__c</fullName>
        <description>Field to decide when the maintenance will expired. Required by a validation rule if Is Maintenance Plan checkbox is checked</description>
        <label>Maintenance Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Module_Community_URL__c</fullName>
        <label>Module Community URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Platform_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Specify here the platform job that should be executed from the learning plan module.</inlineHelpText>
        <label>Platform Job</label>
        <referenceTo>copado1p__Platform_Job__c</referenceTo>
        <relationshipLabel>Learning Plans</relationshipLabel>
        <relationshipName>Learning_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Schedule_Days_for_Reminder__c</fullName>
        <label>Schedule Days for Reminder</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ltcomm__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Learning Plans</relationshipLabel>
        <relationshipName>Learning_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__About_RTA__c</fullName>
        <inlineHelpText>Information displayed in the about section of a Learning Plan</inlineHelpText>
        <label>About</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>redwing__Background_Color__c</fullName>
        <inlineHelpText>HEX Color code for the header background color (e.g. #dcdcdc, more examples in : http://www.color-hex.com/)</inlineHelpText>
        <label>Background Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Background_Image_URL_For_Tile__c</fullName>
        <inlineHelpText>URL for the image displayed in the Learning List Tile</inlineHelpText>
        <label>Background Image URL For Tile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Background_Image_URL__c</fullName>
        <inlineHelpText>URL for the image displayed in the Learning Plan detail header</inlineHelpText>
        <label>Background Image URL For Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Chatter_Notifications_Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Disable this option if you don&apos;t want users to receive chatter notifications when they are assigned to this Learning Plan.</inlineHelpText>
        <label>Chatter Notifications Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Custom_Notification_Message__c</fullName>
        <inlineHelpText>Custom message used for chatter notifications</inlineHelpText>
        <label>Custom Notification Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>redwing__Default_Language_Learning_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Language Learning Plan</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>redwing__Training_Plan__c.Id</field>
                <operation>notEqual</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <filterItems>
                <field>redwing__Training_Plan__c.redwing__Default_Language_Learning_Plan__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>redwing__Training_Plan__c.redwing__Total_Section_Items__c</field>
                <operation>greaterThan</operation>
                <value>0</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>redwing__Training_Plan__c</referenceTo>
        <relationshipLabel>Learning Plans</relationshipLabel>
        <relationshipName>Training_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>redwing__Do_Not_Reset_Progress_For_New_Versions__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this option to prevent resetting progress for new versions of learning objects</inlineHelpText>
        <label>Do Not Reset Progress For New Versions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Duration__c</fullName>
        <label>Duration (minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__Duration_hours__c</fullName>
        <formula>if(!ISBLANK(redwing__Duration__c),
IF(redwing__Duration__c &gt; 59,
TEXT(FLOOR((redwing__Duration__c)/60))&amp;&quot; hr(s) &quot;&amp;TEXT(FLOOR(MOD((redwing__Duration__c)/60,1)*60))&amp;&quot; mins&quot;
,TEXT(FLOOR(redwing__Duration__c))&amp;&quot; mins&quot;
)
,&quot;&quot;)</formula>
        <label>Duration (hours)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Enable_Assignment_Management_for_Users__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this option to enable users with the &quot;Manage External Assignments&quot; custom permission to assign external users to this Learning Plan</inlineHelpText>
        <label>Enable Assignment Management for Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Enable_Self_Registration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if you&apos;d like to make this Learning Plan available to all your company and allow users to create assignments on-the-fly.</description>
        <inlineHelpText>Check this box if you&apos;d like to make this Learning Plan available to all your company and allow users to create assignments on-the-fly.</inlineHelpText>
        <label>Enable Self-Registration (Obsolete)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>redwing__Enforce_Sequence__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Enable this option to require users to complete the learning activities in the specified order</inlineHelpText>
        <label>Enforce Sequence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Hide_After_End_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Hide this Learning Plan for end-users if the current date is outside of the Start/End Date range</inlineHelpText>
        <label>Hide After End Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Hide_Chatter_Photos__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this option to hide chatter photos for the last users that have acquired the Learning Plan achievement</inlineHelpText>
        <label>Hide Chatter Photos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Intro_Video_URL__c</fullName>
        <inlineHelpText>URL for the embedded intro video shown in the Learning Plan detail page</inlineHelpText>
        <label>Intro Video URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>redwing__Languages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>redwing__Max_Registrations__c</fullName>
        <inlineHelpText>Maximum number of allowed registrations</inlineHelpText>
        <label>Max Registrations</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__Min_Items_For_Completion__c</fullName>
        <inlineHelpText>Define a minimum # of learning items to complete in order to complete the Learning Plan</inlineHelpText>
        <label>Min Items for Completion</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__New_Until__c</fullName>
        <inlineHelpText>Display a New ribbon in the Learning Plan until the specified date</inlineHelpText>
        <label>New Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>redwing__Optional_Feedback_Comments__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this option to make feedback comments not required</inlineHelpText>
        <label>Optional Feedback Comments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Payment_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this option to require payment in order to register to this Learning Plan</inlineHelpText>
        <label>Payment Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Requires_Approval_To_Register__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If selected, learning administrators will need to approve users&apos; registration requests.</inlineHelpText>
        <label>Requires Approval to Register</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Self_Registration_Access__c</fullName>
        <inlineHelpText>&quot;Public&quot; or blank allows users to create assignments &quot;on the fly&quot;. &quot;Requires Approval&quot; logs an approval request that is later handled by the Learning Plan owner.&quot;External&quot; exposes this Learning Plan to all users.</inlineHelpText>
        <label>Self-Registration Access (Obsolete)</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>redwing__Enable_Self_Registration__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Public</fullName>
                    <default>true</default>
                    <label>Public</label>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
                <value>
                    <fullName>Requires Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>redwing__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>redwing__Status__c</fullName>
        <inlineHelpText>Only Active Learning Plans will be visible to learners, Draft plans will be visible for Learning Admins</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>redwing__Text_Color__c</fullName>
        <inlineHelpText>HEX Color code for the header text color (e.g. #333333, more examples in : http://www.color-hex.com/)</inlineHelpText>
        <label>Text Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Total_Ratings_Count__c</fullName>
        <label>Total Ratings Count</label>
        <summaryFilterItems>
            <field>redwing__Training_Plan_Feedback__c.redwing__Rating__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>redwing__Training_Plan_Feedback__c.redwing__Training_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>redwing__Total_Ratings_Sum__c</fullName>
        <label>Total Ratings Sum</label>
        <summarizedField>redwing__Training_Plan_Feedback__c.redwing__Rating__c</summarizedField>
        <summaryFilterItems>
            <field>redwing__Training_Plan_Feedback__c.redwing__Rating__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>redwing__Training_Plan_Feedback__c.redwing__Training_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>redwing__Total_Section_Items__c</fullName>
        <label>Total Section Items</label>
        <summarizedField>redwing__Training_Plan_Section__c.redwing__Total_Section_Items__c</summarizedField>
        <summaryFilterItems>
            <field>redwing__Training_Plan_Section__c.redwing__Removed__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>redwing__Training_Plan_Section__c.redwing__Training_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>redwing__Training_Plan_Rating__c</fullName>
        <formula>IF( redwing__Total_Ratings_Count__c &gt; 0 , redwing__Total_Ratings_Sum__c/redwing__Total_Ratings_Count__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Learning Plan Rating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__Withdraw_Cutoff__c</fullName>
        <label>Withdraw Cutoff</label>
        <type>Date</type>
    </fields>
    <label>Learning Plan</label>
    <listViews>
        <fullName>Ebike</fullName>
        <columns>NAME</columns>
        <columns>redwing__Description__c</columns>
        <columns>redwing__Status__c</columns>
        <columns>redwing__Start_Date__c</columns>
        <columns>redwing__End_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>redwing__Enable_Self_Registration__c</columns>
        <columns>redwing__Self_Registration_Access__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>Module</value>
        </filters>
        <label>Ebike</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>redwing__All</fullName>
        <columns>NAME</columns>
        <columns>redwing__Description__c</columns>
        <columns>redwing__Status__c</columns>
        <columns>redwing__Start_Date__c</columns>
        <columns>redwing__End_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>redwing__Enable_Self_Registration__c</columns>
        <columns>redwing__Self_Registration_Access__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Learning Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Learning Plans</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>redwing__LMS_Sharing__c</fullName>
        <label>LMS Sharing</label>
    </sharingReasons>
    <validationRules>
        <fullName>Maintenance_Expiration_Date_is_required</fullName>
        <active>true</active>
        <description>This rule checks expiration date is populated when is maintenance plan checkbox is checked</description>
        <errorConditionFormula>IF(AND(Is_Maintenance_Plan__c, ISBLANK( Maintenance_Expiration_Date__c)), true, false )</errorConditionFormula>
        <errorDisplayField>Maintenance_Expiration_Date__c</errorDisplayField>
        <errorMessage>Please enter Maintenance Expiration Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>redwing__Date_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>redwing__Start_Date__c &gt;  redwing__End_Date__c</errorConditionFormula>
        <errorMessage>Start Date cannot be greater than End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>redwing__Empty_Date_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>(!ISBLANK(redwing__Start_Date__c) &amp;&amp; ISBLANK(redwing__End_Date__c)) || (ISBLANK(redwing__Start_Date__c) &amp;&amp; !ISBLANK(redwing__End_Date__c))</errorConditionFormula>
        <errorMessage>You must set a value for Start and End date or leave both empty</errorMessage>
    </validationRules>
</CustomObject>